# django-mditor

./: MANIFEST.in  README.md  pyproject.toml
django_mditor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mditor/: configs.py  fields.py  views.py  widgets.py
mditor/static/mditor/css/: highlight.min.css
mditor/static/mditor/js/: mditor.js
mditor/templates/mditor/: widget.html
